lib_LIBRARIES = libTA.a
libTA_a_SOURCES = TALog.c            \
                  TATXStat.c         \
                  TASession.c        \
                  TASessionManager.c
TAincludedir = $(includedir)/TA
TAinclude_HEADERS = TA.h               \
                    TABool.h           \
                    TATime.h           \
                    TALog.h            \
                    TATXStat.h         \
                    TASession.h        \
                    TASessionManager.h
