lib_LIBRARIES = libTA.a
libTA_a_SOURCES = TARandom.c         \
                  TALog.c            \
                  TADistribution.c   \
                  TATXStat.c         \
                  TASession.c        \
                  TASessionManager.c
TAincludedir = $(includedir)/TA
TAinclude_HEADERS = TA.h               \
                    TABool.h           \
                    TATime.h           \
                    TARandom.h         \
                    TALog.h            \
                    TADistribution.h   \
                    TATXStat.h         \
                    TASession.h        \
                    TASessionManager.h
